[FEATURE] Add possibility to redirect to configured missing permissions page

--- a/Resources/Private/Language/locallang_tca.xlf
+++ b/Resources/Private/Language/locallang_tca.xlf
@@ -4,16 +4,19 @@
         <header/>
         <body>
             <trans-unit id="site_errorhandling.tx_sierrha_loginPage">
-                <source>Login Page</source>
+                <source>Login page</source>
+            </trans-unit>
+            <trans-unit id="site_errorhandling.tx_sierrha_missingPermissionsPage">
+                <source>Missing permissions page</source>
             </trans-unit>
             <trans-unit id="site_errorhandling.tx_sierrha_loginPage.placeholder">
                 <source>Internal page id or external URL</source>
             </trans-unit>
             <trans-unit id="site_errorhandling.tx_sierrha_loginPage.wizard_title">
-                <source>Login Page - Page or URL</source>
+                <source>Login page - Page or URL</source>
             </trans-unit>
             <trans-unit id="site_errorhandling.tx_sierrha_loginUrlParameter">
-                <source>Return Parameter for Login Page URL</source>
+                <source>Return parameter for login page URL</source>
             </trans-unit>
         </body>
     </file>
