--- a/Resources/Private/Language/locallang_tca.xlf
+++ b/Resources/Private/Language/locallang_tca.xlf
@@ -6,6 +6,9 @@
             <trans-unit id="site_errorhandling.tx_sierrha_loginPage">
                 <source>Login Page</source>
             </trans-unit>
+            <trans-unit id="site_errorhandling.tx_sierrha_noPermissionsContentSource">
+                <source>Show Content from Page on Missing Permissions</source>
+            </trans-unit>
             <trans-unit id="site_errorhandling.tx_sierrha_loginPage.placeholder">
                 <source>Internal page id or external URL</source>
             </trans-unit>
