--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -15,7 +15,7 @@
             <trans-unit id="noPermissionsTitle">
                 <source>No Permissions</source>
             </trans-unit>
-            <trans-unit id="noPermissions">
+            <trans-unit id="noPermissionsDetails">
                 <source>You have no permissions to access the requested page.</source>
             </trans-unit>
         </body>
